Revision history for Perl extension Inline::CPP.
0.34_004 ----------------------------
    - Code formatting cleanup in CPP.pm and grammar.pm.
    - All code now passes Perl::Critic level 5, including test suite.
    - Back out NetBSD ineffective NetBSD patch.
0.34_003 Fri Feb 24 08:28:00 PST 2012
    - Add (untested) code to Makefile.PL to deal with NetBSD so that
      we can get a clean NetBSD install. EXPERIMENTAL in this version.
    - Add check to CPP.pm to avoid a noisy warning about undefined value
      when user code includes a subroutine with 'void' as param list.
      (Note: This does NOT add 'void' as a valid param list type.)
    - POD refinements.
0.34_002 Thur Feb 16 12:00:00 PST 2012
    - Patch to Makefile.PL provided by smoke tester Steven Schubiger which
      allows module to successfully install on MirBSD systems. Thanks!
    - Patch to Makefile.PL by Dave Oswald to allow successful install for
      Darwin OS by setting proper default libraries.
0.34_001 Thur Feb 09 23:22:00 PST 2012
    - Patched Makefile.PL (as suggested by sisyphus) to better detect proper
      Solaris compiler (targeting Solaris 2.11 bug).
0.34 Mon Feb 06 22:32:00 PST 2012
    - Carry all updates current in 0.33_010(Dev) to 0.34(Stable) for release
      to CPAN.
    - Set minimum version for Inline and Inline::C dependency to 0.50 to
      take advantage of Inline patch that resolves the issue where smoke
      testers were unable to locate Parse::RecDescent dependency.
    - POD revisions.
0.33_010  Fri Feb 03 23:45:00 PST 2012
    [Patch applied by David Oswald]
    *** NEVER RELEASED ***
    - Update Makefile.PL to set v0.49_02 as the minimum Inline and Inline::C
      dependency versions to further evalute smoke-tests.
0.33_009  Thu Feb 02 10:32:00 PST 2012
    [Worked out patch between David Oswald and sisyphus]
    - Roll back early loading of Parse::RecDescent.
    - Set PREREQ_PM to Inline 0.49_01 to take advantage of recent bugfix.