@@ -39,5 +39,5 @@
       }
    },
    "release_status" : "testing",
-   "version" : "0.34_003"
+   "version" : "0.34_004"
 }
