@@ -1,5 +1,5 @@
 ---
-abstract: 'Write Perl subroutines and classes in C++.'
+abstract: Write Perl subroutines and classes in C++.
 author:
   - 'David Oswald <davido@cpan.org>'
 build_requires:
@@ -21,4 +21,4 @@ requires:
   Inline: 0.50
   Inline::C: 0.50
   Parse::RecDescent: 0
-version: 0.34_003
+version: 0.34_004
